[metadata]
name = nova_exporter
version = attr: nova_exporter.__version__
description = Prometheus exporter for OpenStack Nova
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsks/libvirt_exporter
author = Lars Kellogg-Stedman
author_email = lars@oddbit.com

[options]
packages = find:
install_requires =
    click
    openstacksdk
    prometheus_client
    pyyaml

[options.entry_points]
console_scripts =
    nova-exporter = nova_exporter.main:main
